--- a/front-end/app/globals.css
+++ b/front-end/app/globals.css
@@ -1,76 +1,88 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --max-width: 1140px;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-color: #23AEBA;
+  --secondary-color: #ABF8E4;
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --background-color: #f4fbf9;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --black-100: #030f10;
+  --black-75: #030e0fbf;
+  --black-50: #030e0f80;
+
+  --white-100: #f4fbf9;
+  --white-75: #f4fbf9bf;
+  --white-50: #f4fbf980;
+
+  /* Step -2: 14.22px → 15.36px */
+  --fs-small-2: clamp(0.89rem, calc(0.86rem + 0.14vw), 0.96rem);
+
+  /* Step -1: 16.00px → 19.20px */
+  --fs-small-1: clamp(1.00rem, calc(0.92rem + 0.39vw), 1.20rem);
+
+  /* Step 0: 18.00px → 24.00px */
+  --fs-p: clamp(1.13rem, calc(0.98rem + 0.73vw), 1.50rem);
+
+  /* Step 1: 20.25px → 30.00px */
+  --fs-h5: clamp(1.27rem, calc(1.03rem + 1.19vw), 1.88rem);
+
+  /* Step 2: 22.78px → 37.50px */
+  --fs-h4: clamp(1.42rem, calc(1.06rem + 1.80vw), 2.34rem);
+
+  /* Step 3: 25.63px → 46.88px */
+  --fs-h3: clamp(1.60rem, calc(1.08rem + 2.59vw), 2.93rem);
+
+  /* Step 4: 28.83px → 58.59px */
+  --fs-h2: clamp(1.80rem, calc(1.08rem + 3.63vw), 3.66rem);
+
+  /* Step 5: 32.44px → 73.24px */
+  --fs-h1: clamp(2.03rem, calc(1.03rem + 4.98vw), 4.58rem);
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+li,
+p,
+a {
+  font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
+  color: var(--black-100);
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+h1 {
+  font-size: var(--fs-h1);
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+h2 {
+  font-size: var(--fs-h2);
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+h3 {
+  font-size: var(--fs-h3);
+}
+
+h4 {
+  font-size: var(--fs-h4);
+}
+
+h5 {
+  font-size: var(--fs-h5);
+}
+
+p,
+li,
+a {
+  font-size: var(--fs-p);
+}
+
+small {
+  font-size: var(--fs-small-1);
 }
 
 * {
@@ -79,29 +91,17 @@
   margin: 0;
 }
 
+body {
+  background-color: var(--background-color);
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
