--- a/front-end/app/p/signup/page.module.css
+++ b/front-end/app/p/signup/page.module.css
@@ -22,11 +22,24 @@
 
 }
 
+#container a {
+    display: block;
+
+    margin: 32px auto;
+
+    text-decoration: underline;
+
+    color: var(--black-75);
+}
+
 #container>form {
 
     margin-bottom: 32px;
 
     padding: 16px;
+
+    width: 100%;
+    max-width: calc(100vw - 16px);
 
     background-color: var(--primary-color);
 
@@ -37,6 +50,16 @@
     flex-direction: column;
 
     gap: 16px 0;
+
+}
+
+@media(min-width: 540px) {
+
+    #container>form {
+
+        max-width: 520px;
+
+    }
 
 }
 
@@ -56,22 +79,11 @@
     margin-top: 8px;
 
     padding: 12px 16px;
-    width: 300px;
 
     border-radius: 8px;
     border: 2px solid var(--black-25);
 
     font-size: var(--fs-small-1);
-
-}
-
-@media(min-width: 420px) {
-
-    #container>form input {
-
-        width: 420px;
-
-    }
 
 }
 
@@ -90,6 +102,15 @@
 
     box-shadow: 2px 2px 4px 0px var(--black-10);
 
+}
+
+#container>form button[type="submit"]:disabled {
+    background-color: var(--black-50);
+}
+
+#container>form button[type="submit"] svg {
+    height: 28px;
+    transform: scale(1.5)
 }
 
 #container>form button[type="submit"]:hover {
