--- a/front-end/app/page.module.css
+++ b/front-end/app/page.module.css
@@ -2,7 +2,7 @@
 
     min-height: 80vh;
 
-    background-image: linear-gradient(to bottom, transparent, var(--white-100) 50%), url("/img/pattern_waves.png");
+    background-image: linear-gradient(#4a2e83 60%, var(--white-100));
     background-position: top;
     background-repeat: no-repeat;
 
@@ -11,19 +11,49 @@
 
 }
 
+#container>div {
+
+    max-width: calc(100% - 16px);
+
+}
+
+@media(min-width: 784px) {
+    #container>div {
+
+        max-width: 768px;
+
+    }
+}
+
+#heading_text {
+
+    width: fit-content;
+    margin: 0 auto;
+
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+}
+
+#heading_text>h1 {
+    font-weight: 400;
+}
+
+#heading_text>p {
+    font-weight: 300;
+}
+
+#heading_text>h1,
+#heading_text>p {
+    text-align: center;
+    color: var(--white-100);
+}
+
 #form_container {
 
-    position: absolute;
-    top: 20vh;
+    background-color: rgba(250, 250, 250, 0.2);
 
-    left: 0;
-    right: 0;
-
-    background-color: var(--primary-color);
-
-    border: 4px solid var(--white-100);
-
-    border-radius: 4px;
+    border-radius: 8px;
 
     margin: auto;
 
@@ -31,48 +61,72 @@
 
 }
 
-@media(min-width: 520px) {
-    #form_container {
-        left: calc(50% - (520px / 2));
-        right: unset;
-        min-width: 520px;
-        max-width: 520px;
-    }
-}
-
 #form_container form {
 
-    width: 50%;
+    width: 90%;
 
     margin: auto;
 
-    padding: 64px 0;
+    padding: 48px 0;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
 
+}
+
+@media(min-width: 426px) {
+    #form_container form {
+
+        width: 90%;
+
+        margin: auto;
+
+        flex-direction: row;
+        align-items: flex-end;
+
+    }
+}
+
+#form_container form[data-loading=true] {
+    transition: all ease-in-out 100ms;
+    opacity: 0.4;
 }
 
 #form_container form label {
 
+    width: inherit;
+
     display: grid;
-    gap: 8px;
+    gap: 16px;
     flex-direction: column;
 
+    font-weight: 300;
     color: var(--white-100);
 
 }
 
+@media(max-width: 425px) {
+    #form_container form label {
+        width: 100%;
+    }
+}
+
 #form_container form input {
 
-    padding: 8px;
+    padding: 16px;
 
     border: 2px solid var(--black-10);
-    border-radius: 4px;
+    border-radius: 8px 0 0 8px;
 
     font-size: var(--fs-small-1);
 
+}
+
+@media(max-width: 425px) {
+    #form_container form input {
+        border-radius: 8px;
+    }
 }
 
 #form_container form button[type=submit] {
@@ -86,43 +140,67 @@
 
     margin-top: 32px;
 
-    padding: 8px;
+    padding: 16px 8px;
 
-    background-color: var(--white-100);
+    background-color: #4a2e83;
 
-    color: var(--primary-color);
+    background-image: linear-gradient(to right, #4a2e83 0%, #b224ef 51%, #4a2e83 100%);
+    transition: 0.5s;
+    background-size: 200% auto;
 
-    border: 2px solid var(--secondary-color);
-    border-radius: 6px;
+    color: var(--white-100);
+
+    border: 2px solid var(--white-100);
+    border-radius: 0 8px 8px 0;
 
     font-size: var(--fs-small-1);
+    font-weight: 500;
 
+}
+
+@media(max-width: 425px) {
+    #form_container form button[type=submit] {
+        border-radius: 8px;
+        justify-content: center;
+    }
 }
 
 #form_container form button[type=submit]:hover {
 
     transition: all ease-in-out 100ms;
-
+    background-position: right center;
     transform: scale(1.05);
 
     box-shadow: 2px 2px 10px 0px var(--black-50);
 
 }
 
-span#loading{
+span#loading svg {
 
     display: block;
-    transform: scale(0.7);
+
+    height: 62px;
 
 }
 
 #result_container {
 
-    margin-bottom: 32px;
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
 
 }
 
-#result_container h3 {
+#success_message_container {
+
+    padding: 16px 0;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+}
+
+#success_message_container h3 {
 
     margin-bottom: 16px;
 
@@ -150,21 +228,19 @@ span#loading{
 
 }
 
-@media(min-width: 520px) {
-    #clipboard_container {
-        flex-direction: row;
-    }
-}
-
 #clipboard_container a#new_url {
+
+    margin: 16px 0;
 
     text-align: center;
 
     display: block;
 
-    font-size: var(--fs-small-1);
+    font-size: var(--fs-small-2);
 
-    font-weight: 600;
+    font-weight: 400;
+
+    text-decoration: underline;
 
     color: var(--white-100);
 
@@ -174,10 +250,23 @@ span#loading{
 
     cursor: pointer;
 
-    padding: 8px;
+    padding: 8px 16px;
 
-    border: 4px solid var(--white-75);
-    border-radius: 50%;
+    background-color: #4a2e83;
+
+    color: var(--white-100);
+
+    border: 2px solid var(--white-75);
+    border-radius: 4px;
+
+    display: flex;
+    gap: 8px;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+
+    font-size: var(--fs-small-2);
+    font-weight: 600;
 
 }
 
@@ -185,7 +274,7 @@ span#loading{
 
     transition: all ease-in-out 100ms;
 
-    transform: scale(1.1);
+    transform: scale(1.05);
 
     box-shadow: 2px 2px 10px 0px var(--black-50);
 
@@ -195,6 +284,6 @@ span#loading{
 
     display: block;
 
-    fill: var(--primary-color);
+    fill: var(--white-100);
 
 }
