--- a/front-end/app/layout/footer/footer.module.css
+++ b/front-end/app/layout/footer/footer.module.css
@@ -2,7 +2,7 @@
 
     padding: 16px;
 
-    background-color: var(--primary-color);
+    background-color: var(--white-100);
 
 }
 
@@ -20,9 +20,9 @@
 
     font-size: var(--fs-small-1);
 
-    font-weight: 500;
+    font-weight: 400;
 
-    color: var(--white-75);
+    color: #4a2e83;
 
 }
 
@@ -35,11 +35,11 @@
 
 #links_container li * {
 
-    font-size: var(--fs-small-1);
+    font-size: var(--fs-small-2);
 
     font-weight: 500;
 
-    color: var(--white-100);
+    color: var(--black-50);
 
 }
 
@@ -47,17 +47,17 @@
 
     transition: all ease-in-out 100ms;
 
-    color: var(--white-75);
+    color: var(--black-75);
 
 }
 
 #container small {
 
-    margin-top: 32px;
+    margin-top: 64px;
 
     font-size: var(--fs-small-2);
 
-    color: var(--white-75);
+    color: #4a2e83;
 
     display: block;
     text-align: center;
