--- a/front-end/app/globals.css
+++ b/front-end/app/globals.css
@@ -2,8 +2,7 @@
 
   --max-width: 1140px;
 
-  /* --primary-color: #4a2e83; */
-  --primary-color: #23AEBA;
+  --primary-color: #4a2e83;
   --secondary-color: #ABF8E4;
 
   --background-color: #f4fbf9;
